# Street-sparse-3DGS

./: .gitignore  .gitmodules  Dockerfile  additional_depths_training.sh  complete_training.sh  constraint_training.sh  entrypoint.sh  evaluate_models.sh  lidar_training.sh  render_hierarchy.py  render_hierarchy_final.py  render_hierarchy_new.py  render_hierarchy_weighted.py  render_position.py  train_all_images.sh  train_single.py
arguments/: __init__.py
gaussian_renderer/: __init__.py
lpipsPyTorch/: __init__.py
preprocess/: generate_chunks.py  generate_colmap.py  make_chunk.py  ss_make_chunk.py
scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
scripts/: full_train.py
ss_utils/: augment_recording_details.py  colmap_fix.py  colmap_to_vis2mesh.py  convert_to_ply.py  copy_test_and_depth_params_files.py  copy_test_file.py  create_inputs.py  ctm_exporter.cpp  ctm_mesh_split.py  depth_map_to_distances.py  downsample_test.py  format_input_images.py  generate_colmap_calibration.py  laz_to_unified_ply.py  load_test.py  mask_images.py  ply_mesh_to_ctm.py  remove_test.py  save_test.py  setup.py  ss_downsample_LiDAR_DBSCAN  (+6 more)
ss_utils/deprecatedAndOthers/gaussian_splatting/gaussians_prepare_data/: pyproject.toml
ss_utils/deprecatedAndOthers/gaussian_splatting/gaussians_prepare_data/src/gaussians_prepare_data/: __init__.py  __main__.py  __main__10images.py  __main__4images.py  __main__recordin.py
ss_utils/deprecatedAndOthers/gaussian_splatting/gaussians_prepare_data/test/: config_test_data.py  conftest.py  test_billboards_prepare_data.py
(+54 files in other folders)
