[tool.poetry]
name = "gaussians-prepare-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
include = ["src/gaussians_prepare_data/cf_py_importer.py"]
packages = [{include = "gaussians_prepare_data", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
cf-py-ml = {path = "../../../libs/cf_py_ml", develop = true}
cf-py-inventory-billboards = {path = "../../../libs/cf_py_inventory_billboards", develop = true}
cf-py-image = {path = "../../../libs/cf_py_image", develop = true}


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
python-dateutil = "^2.8.2"

[[tool.poetry.source]]
name = "cityfusion-private"
url = "http://gpuproc07.cyclomedia001.cyclomedia.intern:8081/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
